--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
           <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="./assets/img/stay1.jpeg" style="width:90%">
+            <img src="../orizinaru-website/assets/img/stay1.jpeg" style="width:90%">
             <div class="text">Caption Text</div>
           </div>
           
